Enhance recommendation of VM specs and OS images
* Specify a source server for each recommended VM spec
* Specify a source server for each recommended VM OS image
* Eliminate duplication of recommended VM specs
* Eliminate duplication of recommended VM OS images
